--- a/ImpactCalculateWebApplication/Views/Home/Index.cshtml
+++ b/ImpactCalculateWebApplication/Views/Home/Index.cshtml
@@ -193,13 +193,13 @@
 
                     @{
 
-                        @*<td rowspan="13">1</td>*@
-
                         for (int i = 0; i < @Model.Count; i++)
                         {
                             if (i % 12 == 0)
                             {
-                                <td rowspan="13">@(i/12+1)</td>
+                                int rowSpanValue = i / 12 + 1;
+
+                                <td rowspan="13">@(rowSpanValue)</td>
                             }
 
                             <tr>
@@ -286,124 +286,115 @@
                         }
                     }
 
-
-
-
                     <script>
-            $(document).ready(function () {
+                        $(document).ready(function () {
 
-            let rowCount = $('table tr').length - 2;
-            let shiftCount = 1;
-            let shiftTime = 13;
-            console.log(rowCount);
+                            let test = $('#table tr').length / 12;
 
+                        // Добавление
+                        $('#AddRow').on('click', function () {
 
-            // Добавление
-            $('#AddRow').on('click', function () {
+                            @{
+                                var newInput = InputDataModel.GetDefaultData();
+                                newInput.ID = ++id;
+                                Model.Add(newInput);
+                            }
 
-                @{
-                    var newInput = InputDataModel.GetDefaultData();
-                    newInput.ID = ++id;
-                    Model.Add(newInput);
-                }
+                            let rowCount = $('#table tr').length;
+                            let shiftCount = Math.ceil(rowCount / 12);
+                            let shiftTime = 13;
 
-                rowCount++;
-                console.log(rowCount);
+                            console.log(shiftCount);
 
-                if (rowCount - shiftTime == 0) {
-                    shiftCount++;
+                            if (shiftCount != test) {
+                                test = shiftCount;
+                                $('#table tbody').append(`<td class="text-center" rowspan="${shiftTime}">${shiftCount}</td>`);
+                            }
 
-                    rowCount = 1;
-                    console.log(rowCount, shiftTime);
-                    console.log("shift : " + shiftCount);
-                    $('tbody').append(`<td class="text-center" rowspan="${shiftTime}">${shiftCount}</td>`);
-                }
+                            $('#table tbody').append(`<tr>
 
+                                <td>
+                                    <input class="form-control" name="[@(Model.Count - 1)].Air_Spend" type="text" value=@Model[Model.Count - 1].Air_Spend>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@(Model.Count - 1)].Air_Pressure" type="text" value=@Model[Model.Count - 1].Air_Pressure>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@(Model.Count - 1)].Air_Temperature" type="text" value=@Model[Model.Count - 1].Air_Temperature>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@(Model.Count - 1)].Smoke_Temperature" type="text" value=@Model[Model.Count - 1].Smoke_Temperature>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@(Model.Count - 1)].Viscosity" type="text" value=@Model[Model.Count - 1].Viscosity>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@(Model.Count - 1)].Smelt_Temperature" type="text" value=@Model[Model.Count - 1].Smelt_Temperature>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@(Model.Count - 1)].CO_Percentage" type="text" value=@Model[Model.Count - 1].CO_Percentage>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@(Model.Count - 1)].CO2_Percentage" type="text" value=@Model[Model.Count - 1].CO2_Percentage>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@(Model.Count - 1)].N2_Percentage" type="text" value=@Model[Model.Count - 1].N2_Percentage>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@(Model.Count - 1)].O2_Percentage" type="text" value=@Model[Model.Count - 1].O2_Percentage>
+                                </td>
 
-                $('tbody').append(`<tr>
+                                @* РАСХОД МАТЕРИАЛОВ *@
 
-                    <td>
-                        <input class="form-control" name="[@(Model.Count - 1)].Air_Spend" type="text" value=@Model[Model.Count - 1].Air_Spend>
-                    </td>
-                    <td>
-                        <input class="form-control" name="[@(Model.Count - 1)].Air_Pressure" type="text" value=@Model[Model.Count - 1].Air_Pressure>
-                    </td>
-                    <td>
-                        <input class="form-control" name="[@(Model.Count - 1)].Air_Temperature" type="text" value=@Model[Model.Count - 1].Air_Temperature>
-                    </td>
-                    <td>
-                        <input class="form-control" name="[@(Model.Count - 1)].Smoke_Temperature" type="text" value=@Model[Model.Count - 1].Smoke_Temperature>
-                    </td>
-                    <td>
-                        <input class="form-control" name="[@(Model.Count - 1)].Viscosity" type="text" value=@Model[Model.Count - 1].Viscosity>
-                    </td>
-                    <td>
-                        <input class="form-control" name="[@(Model.Count - 1)].Smelt_Temperature" type="text" value=@Model[Model.Count - 1].Smelt_Temperature>
-                    </td>
-                    <td>
-                        <input class="form-control" name="[@(Model.Count - 1)].CO_Percentage" type="text" value=@Model[Model.Count - 1].CO_Percentage>
-                    </td>
-                    <td>
-                        <input class="form-control" name="[@(Model.Count - 1)].CO2_Percentage" type="text" value=@Model[Model.Count - 1].CO2_Percentage>
-                    </td>
-                    <td>
-                        <input class="form-control" name="[@(Model.Count - 1)].N2_Percentage" type="text" value=@Model[Model.Count - 1].N2_Percentage>
-                    </td>
-                    <td>
-                        <input class="form-control" name="[@(Model.Count - 1)].O2_Percentage" type="text" value=@Model[Model.Count - 1].O2_Percentage>
-                    </td>
+                                <td>
+                                    <input class="form-control" name="[@(Model.Count - 1)].Gabbro" type="text" value=@Model[Model.Count - 1].Gabbro>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@(Model.Count - 1)].Limestone" type="text" value=@Model[Model.Count - 1].Limestone>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@(Model.Count - 1)].M_Limestone" type="text" value=@Model[Model.Count - 1].M_Limestone>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@(Model.Count - 1)].Cocks" type="text" value=@Model[Model.Count - 1].Cocks>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@(Model.Count - 1)].Gas" type="text" value=@Model[Model.Count - 1].Gas>
+                                </td>
 
-                    @* РАСХОД МАТЕРИАЛОВ *@
+                                @* СОДЕРЖАНИЕ ОКСИДОЕ *@
 
-                    <td>
-                        <input class="form-control" name="[@(Model.Count - 1)].Gabbro" type="text" value=@Model[Model.Count - 1].Gabbro>
-                    </td>
-                    <td>
-                        <input class="form-control" name="[@(Model.Count - 1)].Limestone" type="text" value=@Model[Model.Count - 1].Limestone>
-                    </td>
-                    <td>
-                        <input class="form-control" name="[@(Model.Count - 1)].M_Limestone" type="text" value=@Model[Model.Count - 1].M_Limestone>
-                    </td>
-                    <td>
-                        <input class="form-control" name="[@(Model.Count - 1)].Cocks" type="text" value=@Model[Model.Count - 1].Cocks>
-                    </td>
-                    <td>
-                        <input class="form-control" name="[@(Model.Count - 1)].Gas" type="text" value=@Model[Model.Count - 1].Gas>
-                    </td>
+                                <td>
+                                    <input class="form-control" name="[@(Model.Count - 1)].SiO2" type="text" value=@Model[Model.Count - 1].SiO2>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@(Model.Count - 1)].Al2O3" type="text" value=@Model[Model.Count - 1].Al2O3>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@(Model.Count - 1)].CaO" type="text" value=@Model[Model.Count - 1].CaO>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@(Model.Count - 1)].MgO" type="text" value=@Model[Model.Count - 1].MgO>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@(Model.Count - 1)].FeO" type="text" value=@Model[Model.Count - 1].FeO>
+                                </td>
 
-                    @* СОДЕРЖАНИЕ ОКСИДОЕ *@
+                                @* ПАРАМЕТРЫ ОХЛАЖДАЮЩЕЙ ВОДЫ *@
 
-                    <td>
-                        <input class="form-control" name="[@(Model.Count - 1)].SiO2" type="text" value=@Model[Model.Count - 1].SiO2>
-                    </td>
-                    <td>
-                        <input class="form-control" name="[@(Model.Count - 1)].Al2O3" type="text" value=@Model[Model.Count - 1].Al2O3>
-                    </td>
-                    <td>
-                        <input class="form-control" name="[@(Model.Count - 1)].CaO" type="text" value=@Model[Model.Count - 1].CaO>
-                    </td>
-                    <td>
-                        <input class="form-control" name="[@(Model.Count - 1)].MgO" type="text" value=@Model[Model.Count - 1].MgO>
-                    </td>
-                    <td>
-                        <input class="form-control" name="[@(Model.Count - 1)].FeO" type="text" value=@Model[Model.Count - 1].FeO>
-                    </td>
+                                <td>
+                                    <input class="form-control" name="[@(Model.Count - 1)].InputWaterWaste" type="text" value=@Model[Model.Count - 1].InputWaterWaste>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@(Model.Count - 1)].OutputWaterWaste" type="text" value=@Model[Model.Count - 1].OutputWaterWaste>
+                                </td>
+                                <td>
+                                    <input class="form-control" name="[@(Model.Count - 1)].AverageWaterSteamTemperature" type="text" value=@Model[Model.Count - 1].AverageWaterSteamTemperature>
+                                </td>
 
-                    @* ПАРАМЕТРЫ ОХЛАЖДАЮЩЕЙ ВОДЫ *@
+                            </tr>`);
 
-                    <td>
-                        <input class="form-control" name="[@(Model.Count - 1)].InputWaterWaste" type="text" value=@Model[Model.Count - 1].InputWaterWaste>
-                    </td>
-                    <td>
-                        <input class="form-control" name="[@(Model.Count - 1)].OutputWaterWaste" type="text" value=@Model[Model.Count - 1].OutputWaterWaste>
-                    </td>
-                    <td>
-                        <input class="form-control" name="[@(Model.Count - 1)].AverageWaterSteamTemperature" type="text" value=@Model[Model.Count - 1].AverageWaterSteamTemperature>
-                    </td>
-
-                </tr>`);
-
-            });
+                        });
 
 
             @*// Удаление
